# fr-desktop

./: .gitignore  BUILD.md  dev  package.json
.github/workflows/: build.yml
docs/: .~lock.säte-kommunlankod-2026.ods#  ai_testfall.md  cloudflare-ai-proxy.md  demo.txt  säte-kommunlankod-2026.ods
release/: Cargo.toml  README.md  build.sh.example  bump-version.sh  push-latest-dev.sh
release/src/: main.rs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: AiSetup.svelte  ContextMenu.svelte  DashboardPanel.svelte  DebugConsole.svelte  ExportPanel.svelte  HistoryPanel.svelte  KartaPanel.svelte  MailPage.svelte  MenuBar.svelte  MessagesPanel.svelte  NyckeltaPanel.svelte  PostaOverlay.svelte  SackarTab.svelte  SchemaPanel.svelte  SearchArea.svelte  Settings.svelte  SmtpSetup.svelte  SnippetPanel.svelte  SqlEditor.svelte  TemplatesTab.svelte  UtskickTab.svelte  aiPrompt.ts  appearance.svelte.ts  debug.svelte.ts  status.svelte.ts  store.ts
src/routes/: +page.svelte
