[package]
name = "fr-release"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["multipart", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
tempfile = "3"
